--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -6,6 +6,8 @@
     android:background="#434C5E"
     tools:context=".ui.gallery.GalleryFragment">
 
+
+
     <TextView
         android:id="@+id/text_gallery"
         android:layout_width="match_parent"
@@ -17,9 +19,9 @@
         android:minHeight="30sp"
         android:textAlignment="center"
         android:textColor="#D9D9D9"
-        android:textSize="16sp"
 
 
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,22 +30,117 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="288sp"
-        android:layout_height="426sp"
+        android:layout_width="match_parent"
+        android:layout_height="140sp"
+        android:layout_marginTop="8sp"
         android:divider="@color/colorAccent"
         android:dividerHeight="1sp"
         android:fontFamily="@font/regular"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_gallery" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/del_but"
+        android:layout_width="293sp"
+        android:layout_height="45sp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/buttons"
+        android:fontFamily="@font/regular"
+        android:text="@string/delete_routs"
+        android:textAlignment="center"
+        android:textColor="#D9D9D9"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listView"
+        tools:ignore="MissingConstraints" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_routs"
+        android:layout_width="293sp"
+        android:layout_height="45sp"
+        android:layout_marginTop="12sp"
+        android:background="@drawable/buttons"
+        android:fontFamily="@font/regular"
+        android:text="@string/order"
+        android:textAlignment="center"
+        android:textColor="#D9D9D9"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.525"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_cost" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_minus"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="12dp"
+        android:gravity="center"
+        android:text="-"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_cost"
+        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
+
+    <TextView
+        android:id="@+id/text_view_cost"
+        android:layout_width="100sp"
+        android:layout_height="60sp"
+
+        android:layout_marginTop="16dp"
+        android:background="@drawable/input"
+        android:ems="10"
+        android:fontFamily="@font/light"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
+        tools:ignore="MissingConstraints" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_plus"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16sp"
+        android:backgroundTint="@color/colorAccent"
+        android:gravity="center"
+        android:text="+"
+        android:textSize="30sp"
+        app:layout_constraintStart_toEndOf="@+id/text_view_cost"
+        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
+        tools:ignore="MissingConstraints" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnAdd"
+        android:layout_width="293sp"
+        android:layout_height="45sp"
+        android:layout_marginTop="12sp"
+        android:background="@drawable/buttons"
+        android:fontFamily="@font/regular"
+        android:text="@string/add_services"
+        android:textAlignment="center"
+        android:textColor="#D9D9D9"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/del_but" />
 
-    <Button
-        android:id="@+id/del_but"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/delete_routs"
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+
+        android:layout_marginTop="28dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/del_but" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
