--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,24 +23,72 @@
             app:layout_constraintEnd_toStartOf="@+id/text_from"
             app:layout_constraintTop_toTopOf="@+id/text_from" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_minus"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:layout_marginTop="16sp"
+            android:gravity="center"
+            android:text="-"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_cost"
+            app:layout_constraintHorizontal_bias="0.813"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
+
+        <TextView
+            android:id="@+id/text_view_cost"
+            android:layout_width="100sp"
+            android:layout_height="60sp"
+            android:layout_margin="@dimen/activity_vertical_margin"
+
+            android:layout_marginTop="16sp"
+            android:background="@drawable/input"
+            android:ems="10"
+            android:fontFamily="@font/light"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnAdd"
+            tools:ignore="MissingConstraints" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_plus"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:layout_marginTop="16sp"
+            android:backgroundTint="@color/colorAccent"
+            android:gravity="center"
+            android:text="+"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.149"
+            app:layout_constraintStart_toEndOf="@+id/text_view_cost"
+            app:layout_constraintTop_toBottomOf="@+id/btnAdd"
+            tools:ignore="MissingConstraints" />
+
         <TextView
             android:id="@+id/textfrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5sp"
-            android:layout_marginBottom="1sp"
+            android:layout_marginStart="4sp"
+            android:layout_marginTop="8sp"
             android:fontFamily="@font/light"
             android:text="@string/from_text"
             android:textColor="#9DA0A8"
             android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/text_from"
-            app:layout_constraintStart_toStartOf="@+id/text_from" />
+            app:layout_constraintStart_toStartOf="@+id/text_from"
+            app:layout_constraintTop_toBottomOf="@+id/gpsbut" />
 
         <AutoCompleteTextView
             android:id="@+id/text_from"
-            android:layout_width="wrap_content"
+            android:layout_width="200sp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="55sp"
+            android:layout_marginStart="24sp"
+
             android:background="@drawable/input"
             android:ems="10"
             android:fontFamily="@font/light"
@@ -53,8 +101,8 @@
             android:textColor="#D9D9D9"
             android:textColorHint="#ABD9D9D9"
             android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="@+id/text_to"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textfrom" />
 
         <EditText
             android:id="@+id/from_number"
@@ -72,16 +120,17 @@
             android:textColorHint="#ABD9D9D9"
             android:textSize="18sp"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="@+id/list"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/text_from"
             app:layout_constraintTop_toTopOf="@+id/text_from" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/gpsbut"
-            android:layout_width="60sp"
-            android:layout_height="48sp"
-            android:layout_marginTop="10sp"
+            android:layout_width="55sp"
+            android:layout_height="45sp"
+            android:layout_marginTop="16sp"
+            android:layout_marginEnd="8sp"
             android:background="@drawable/buttons"
             android:fontFamily="@font/regular"
             android:insetLeft="0sp"
@@ -91,14 +140,14 @@
             android:text="@string/gps"
             android:textAlignment="center"
             android:textColor="#D9D9D9"
-            app:layout_constraintEnd_toEndOf="@+id/list"
-            app:layout_constraintTop_toBottomOf="@+id/from_number" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_cost"
+            android:id="@+id/btnOrder"
             android:layout_width="293sp"
             android:layout_height="45sp"
-            android:layout_marginTop="10sp"
+            android:layout_marginTop="12sp"
             android:background="@drawable/buttons"
             android:fontFamily="@font/regular"
             android:insetLeft="0sp"
@@ -108,29 +157,70 @@
             android:text="@string/btn_cost"
             android:textAlignment="center"
             android:textColor="#D9D9D9"
-            android:textSize="20sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/to_number" />
+            app:layout_constraintTop_toBottomOf="@+id/text_view_cost" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnMap"
+            android:layout_width="200sp"
+            android:layout_height="45sp"
+            android:layout_marginTop="16sp"
+            android:background="@drawable/buttons"
+            android:fontFamily="@font/regular"
+            android:insetLeft="0sp"
+            android:insetTop="0sp"
+            android:insetRight="0sp"
+            android:insetBottom="0sp"
+            android:text="@string/on_map"
+            android:textAlignment="center"
+            android:textColor="#D9D9D9"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.124"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnGeo"
+            android:layout_width="293sp"
+            android:layout_height="45sp"
+            android:layout_marginTop="12sp"
+            android:background="@drawable/buttons"
+            android:fontFamily="@font/regular"
+            android:insetLeft="0sp"
+            android:insetTop="0sp"
+            android:insetRight="0sp"
+            android:insetBottom="0sp"
+            android:text="@string/btn_geo_text"
+            android:textAlignment="center"
+            android:textColor="#D9D9D9"
+            android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnOrder" />
 
         <TextView
             android:id="@+id/num2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="17sp"
+            android:layout_marginTop="4sp"
             android:layout_marginEnd="5sp"
             android:fontFamily="@font/regular"
+            android:visibility="invisible"
             android:text="2"
             android:textColor="#D9D9D9"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/text_to"
-            app:layout_constraintTop_toBottomOf="@+id/gpsbut" />
+            app:layout_constraintTop_toBottomOf="@+id/textwhere" />
 
         <AutoCompleteTextView
             android:id="@+id/text_to"
-            android:layout_width="wrap_content"
+            android:layout_width="200sp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24sp"
             android:background="@drawable/input"
             android:ems="10"
             android:fontFamily="@font/light"
@@ -143,21 +233,24 @@
             android:textColor="#D9D9D9"
             android:textColorHint="#ABD9D9D9"
             android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="@+id/list"
-            app:layout_constraintTop_toTopOf="@+id/num2" />
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textwhere" />
 
         <TextView
             android:id="@+id/textwhere"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5sp"
-            android:layout_marginBottom="1sp"
+            android:layout_marginStart="4sp"
+            android:layout_marginTop="20sp"
+            android:visibility="invisible"
             android:fontFamily="@font/light"
             android:text="@string/to_text"
             android:textColor="#9DA0A8"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/text_to"
-            app:layout_constraintStart_toStartOf="@+id/text_to" />
+            app:layout_constraintStart_toStartOf="@+id/text_to"
+            app:layout_constraintTop_toBottomOf="@+id/text_from" />
+
 
         <EditText
             android:id="@+id/to_number"
@@ -175,101 +268,51 @@
             android:textColorHint="#ABD9D9D9"
             android:textSize="18sp"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="@+id/list"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/text_to"
             app:layout_constraintTop_toTopOf="@+id/text_to" />
-
-        <TextView
-            android:id="@+id/texthist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4sp"
-            android:layout_marginBottom="1sp"
-            android:fontFamily="@font/light"
-            android:text="@string/texthist"
-            android:textColor="#9DA0A8"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/list"
-            app:layout_constraintStart_toStartOf="@+id/list" />
-
-
-        <Spinner
-            android:id="@+id/list"
-            android:layout_width="293sp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36sp"
-            android:background="@drawable/history"
-            android:fontFamily="@font/light"
-            android:text="Відсутні"
-            android:textAlignment="textStart"
-            android:textColor="#D9D9D9"
-            android:textSize="17sp"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_cost" />
-
-        <Button
-            android:id="@+id/btn_routs"
-            android:layout_width="293sp"
-            android:layout_height="45sp"
-            android:background="@drawable/buttons"
-            android:fontFamily="@font/regular"
-
-            android:text="@string/routs"
-            android:textAlignment="center"
-            android:textColor="#D9D9D9"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnAdd"
             android:layout_width="293sp"
             android:layout_height="45sp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="28sp"
             android:background="@drawable/buttons"
-
             android:fontFamily="@font/regular"
             android:text="@string/add_services"
             android:textAlignment="center"
             android:textColor="#D9D9D9"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintHorizontal_bias="0.52"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_routs" />
+            app:layout_constraintTop_toBottomOf="@+id/text_to" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/mapbut"
-            android:layout_width="293sp"
-            android:layout_height="45sp"
-            android:layout_marginTop="60dp"
-            android:background="@drawable/buttons"
 
-            android:fontFamily="@font/regular"
-            android:text="@string/on_map"
-            android:textAlignment="center"
-            android:textColor="#D9D9D9"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_open_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/on_map"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintHorizontal_bias="0.979"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_routs" />
+            app:layout_constraintTop_toBottomOf="@+id/btnGeo"
+            app:srcCompat="@android:drawable/ic_dialog_map" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_call"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="52sp"
+            android:layout_height="139sp"
             android:layout_gravity="bottom|end"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="12sp"
             android:contentDescription="@string/call_admin"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.991"
+            app:layout_constraintHorizontal_bias="0.979"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mapbut"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@+id/fab_open_map"
             app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -277,7 +320,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_end="488dp" />
+            app:layout_constraintGuide_end="488sp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
