--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -22,10 +22,54 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="115sp"
+        android:layout_height="47sp"
+        android:layout_marginStart="16sp"
+        android:layout_marginTop="16sp"
+        android:fontFamily="@font/regular"
+
+        android:text="@string/disc_text"
+        android:textColor="#D9D9D9"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="19sp"
+        android:layout_height="23sp"
+        android:layout_marginStart="2sp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/regular"
+        android:text="%"
+        android:textAlignment="center"
+        android:textColor="#D9D9D9"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/discinp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_selected_time" />
+
+    <Button
+        android:id="@+id/btn_plus"
+        android:layout_width="30sp"
+        android:layout_height="40sp"
+        android:layout_marginTop="15sp"
+        android:backgroundTint="@color/colorAccent"
+        android:textAlignment="center"
+
+        android:text="+"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/tv_selected_date"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
         android:id="@+id/tv_selected_time"
         android:layout_width="100sp"
         android:layout_height="33sp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8sp"
         android:background="@drawable/input"
         android:ems="10"
         android:fontFamily="@font/regular"
@@ -35,6 +79,7 @@
         android:textColor="#D9D9D9"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/tv_selected_date"
+        app:layout_constraintHorizontal_bias="0.005"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/list_tariff" />
 
@@ -42,8 +87,8 @@
         android:id="@+id/tv_selected_date"
         android:layout_width="100sp"
         android:layout_height="33sp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8sp"
+        android:layout_marginEnd="16sp"
         android:background="@drawable/input"
         android:ems="10"
         android:fontFamily="@font/regular"
@@ -59,14 +104,13 @@
         android:id="@+id/komentar"
         android:layout_width="100sp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24sp"
+        android:layout_marginStart="16sp"
         android:fontFamily="@font/light"
         android:text="@string/coment"
         android:textColor="#9DA0A8"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />
 
     <EditText
         android:id="@+id/komenterinp"
@@ -86,6 +130,38 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/komentar" />
+
+
+    <Button
+        android:id="@+id/btn_minus"
+        android:layout_width="30sp"
+        android:layout_height="40sp"
+        android:layout_marginStart="8sp"
+        android:layout_marginTop="15sp"
+        android:backgroundTint="@color/colorAccent"
+        android:gravity="center"
+        android:text="-"
+        android:textSize="15sp"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/tv_selected_time" />
+
+    <EditText
+        android:id="@+id/discinp"
+        android:layout_width="60sp"
+        android:layout_height="40sp"
+        android:layout_marginStart="8sp"
+        android:layout_marginTop="12dp"
+
+        android:background="@drawable/input"
+        android:ems="10"
+        android:fontFamily="@font/regular"
+        android:inputType="number"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#D9D9D9"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_minus"
+        app:layout_constraintTop_toBottomOf="@+id/tv_selected_time" />
 
     <TextView
         android:id="@+id/maintext"
@@ -117,15 +193,13 @@
     <Spinner
         android:id="@+id/list_tariff"
         android:layout_width="160sp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8sp"
+        android:layout_height="29sp"
         android:layout_marginTop="16sp"
         android:background="#689194"
         android:radius="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
@@ -137,5 +211,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/maintext"
         app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
