--- a/app/src/main/res/layout/start_layout.xml
+++ b/app/src/main/res/layout/start_layout.xml
@@ -23,16 +23,16 @@
         android:layout_width="match_parent"
         android:layout_height="100sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="60sp"
         android:scaleType="fitCenter"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0sp" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="344dp"
+        android:layout_width="344sp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/nav_header_title"
@@ -45,6 +45,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:layout_constraintVertical_bias="0.5" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="409sp"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@android:color/holo_green_light"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.595"
+        tools:ignore="MissingConstraints" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_again"
@@ -77,6 +91,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="-33dp" />
+        app:layout_constraintGuide_begin="-33sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
