--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,6 +15,16 @@
         android:name="com.taxi.easy.ua.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
+    <fragment
+        android:id="@+id/nav_uid"
+        android:name="com.taxi.easy.ua.ui.uid.UIDFragment"
+        android:label="@string/uid_menu"
+        tools:layout="@layout/fragment_uid" />
+    <fragment
+        android:id="@+id/nav_bonus"
+        android:name="com.taxi.easy.ua.ui.bonus.BonusFragment"
+        android:label="@string/my_bonus_menu"
+        tools:layout="@layout/fragment_bonus" />
 
     <fragment
         android:id="@+id/nav_about"
