--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -7,13 +7,13 @@
     android:background="@color/background_color_new"
     tools:context=".ui.about.AboutFragment">
 
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
         android:layout_margin="8sp"
-        android:layout_marginTop="24dp"
 
         android:gravity="center_horizontal"
         android:text="@string/gdpr0"
@@ -21,61 +21,54 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_version"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <ScrollView
+        android:id="@+id/layout_scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_margin="8sp"
-
-        android:gravity="left|fill_horizontal"
-        android:text="@string/gdpr1"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="250dp"
+        android:layout_marginTop="8sp"
         app:layout_constraintTop_toBottomOf="@+id/textView1"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteX="0dp">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        android:layout_margin="8sp"
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8sp"
+                android:gravity="left|fill_horizontal"
+                android:text="@string/gdpr1"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
 
-        android:gravity="left|fill_horizontal"
-        android:text="@string/gdpr2"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8sp"
+                android:gravity="left|fill_horizontal"
+                android:text="@string/gdpr2"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
 
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:ignore="MissingConstraints" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8sp"
+                android:gravity="left|fill_horizontal"
+                android:text="@string/gdpr3"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_margin="8sp"
-
-        android:gravity="left|fill_horizontal"
-        android:text="@string/gdpr3"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.625"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:ignore="MissingConstraints" />
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/textView7"
@@ -93,21 +86,6 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/text_version"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8sp"
-        android:text="@string/version"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="RtlCompat" />
-
-    <TextView
         android:id="@+id/text_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -116,11 +94,12 @@
         android:layout_marginEnd="8sp"
         android:textAlignment="center"
         android:textColor="@color/white"
+        android:text="@string/my_name"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/layout_scroll"
         tools:ignore="RtlCompat" />
 
     <TextView
@@ -169,9 +148,9 @@
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_email"
+        app:layout_constraintTop_toBottomOf="@+id/text_version"
         tools:ignore="RtlCompat" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -179,13 +158,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="30sp"
+        android:layout_marginBottom="12dp"
+        android:contentDescription="@string/email_friend"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintHorizontal_bias="0.969"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_build"
-        android:contentDescription="@string/email_friend"
-        app:layout_constraintVertical_bias="0.862"
         app:srcCompat="@android:drawable/ic_dialog_email" />
+
+    <TextView
+        android:id="@+id/text_version"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8sp"
+        android:text="@string/version"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_email"
+        tools:ignore="RtlCompat" />
 </androidx.constraintlayout.widget.ConstraintLayout>
