--- a/app/src/main/res/layout/custom_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_dialog_layout.xml
@@ -27,8 +27,8 @@
         android:layout_width="197sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16sp"
-        android:background="@color/colorAccent"
-
+        android:backgroundTint="@color/colorAccent"
+        android:background="@drawable/buttons"
         android:fontFamily="@font/regular"
         android:text="@string/ok_GDPR"
         android:textAlignment="center"
@@ -44,10 +44,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8sp"
         android:layout_marginBottom="20sp"
+        android:background="@drawable/buttons"
         android:fontFamily="@font/regular"
         android:text="@string/cancel_button"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
