--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,8 +32,12 @@
 
         <item
             android:id="@+id/nav_about"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/conf" />
+        <item
+            android:id="@+id/nav_author"
             android:icon="@android:drawable/ic_menu_info_details"
-            android:title="@string/menu_about" />
+            android:title="@string/author_about" />
     </group>
 
 </menu>
