--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -30,8 +30,8 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="381dp"
-        android:layout_height="726dp"
+        android:layout_width="380dp"
+        android:layout_height="300dp"
         android:layout_margin="8sp"
         android:divider="@color/colorAccent"
         android:dividerHeight="1sp"
@@ -54,22 +54,31 @@
             android:id="@+id/scrollButtonUp"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_margin="2dp"
-            android:visibility="invisible"
+            android:layout_margin="8dp"
+            android:visibility="gone"
             android:background="@drawable/round_button_background"
-            android:src="@drawable/up"
+            android:src="@drawable/up_arrow"
+            app:layout_constraintEnd_toStartOf="@+id/scrollButtonDown"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
             tools:ignore="ContentDescription" />
-
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                />
 
 
         <ImageButton
             android:id="@+id/scrollButtonDown"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_margin="2dp"
-            android:visibility="invisible"
+            android:layout_margin="8dp"
+            android:visibility="gone"
             android:background="@drawable/round_button_background"
-            android:src="@drawable/down"
+            android:src="@drawable/down_arrow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/scrollButtonUp"
             tools:ignore="ContentDescription" />
 
     </LinearLayout>
