--- a/app/src/main/res/layout/fragment_uid.xml
+++ b/app/src/main/res/layout/fragment_uid.xml
@@ -72,10 +72,9 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="8dp"
-
         android:layout_marginTop="8dp"
         android:background="@drawable/round_button_background"
-        android:src="@drawable/up"
+        android:src="@drawable/up_arrow"
         app:layout_constraintEnd_toStartOf="@+id/scrollButtonDown"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +88,7 @@
 
         android:layout_marginTop="20dp"
         android:background="@drawable/round_button_background"
-        android:src="@drawable/down"
+        android:src="@drawable/down_arrow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/scrollButtonUp"
