--- a/app/src/main/res/layout/fragment_bonus.xml
+++ b/app/src/main/res/layout/fragment_bonus.xml
@@ -1,33 +1,40 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background_color_new"
-    tools:context=".ui.uid.UIDFragment">
-
-
-    <TextView
-        android:id="@+id/text_bonus"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8sp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8sp"
+        android:layout_height="match_parent"
 
-        android:fontFamily="@font/regular"
+        android:background="@color/background_color_new"
+        tools:context=".ui.uid.UIDFragment">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        android:minHeight="30sp"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnOrder"
-        tools:ignore="RtlCompat" />
+            <TextView
+                android:id="@+id/text_bonus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8sp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="8sp"
 
-    <TextView
+                android:fontFamily="@font/regular"
+
+                android:minHeight="30sp"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnOrder"
+                tools:ignore="RtlCompat" />
+
+            <TextView
         android:id="@+id/text_0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -223,4 +230,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_call"
+                android:layout_width="52dp"
+                android:layout_height="139dp"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="8dp"
+                android:contentDescription="@string/call_admin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_7"
+                app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</ScrollView>
+
