--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,11 +1,18 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/background_color_new"
     tools:context=".ui.gallery.GalleryFragment">
-
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
 
     <TextView
@@ -31,8 +38,8 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:layout_margin="8sp"
+        android:layout_height="200dp"
+        android:layout_margin="8dp"
         android:divider="@color/colorAccent"
         android:dividerHeight="1sp"
         android:fadeScrollbars="false"
@@ -62,10 +69,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="ContentDescription" />
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                />
 
 
         <ImageButton
@@ -83,25 +86,23 @@
 
     </LinearLayout>
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/del_but"
+            android:layout_width="293sp"
+            android:layout_height="45sp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/buttons"
+            android:fontFamily="@font/regular"
+            android:text="@string/delete_routs"
+            android:textAlignment="center"
+            android:textColor="#D9D9D9"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout"
+            tools:ignore="MissingConstraints" />
 
-
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/del_but"
-        android:layout_width="293sp"
-        android:layout_height="45sp"
-        android:background="@drawable/buttons"
-        android:fontFamily="@font/regular"
-        android:text="@string/delete_routs"
-        android:textAlignment="center"
-        android:textColor="#D9D9D9"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout"
-        tools:ignore="MissingConstraints" />
-
-    <androidx.appcompat.widget.AppCompatButton
+        <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_routs"
         android:layout_width="293sp"
         android:layout_height="45sp"
@@ -191,7 +192,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
 
-    <ProgressBar
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_call"
+            android:layout_width="52dp"
+            android:layout_height="139dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/call_admin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_routs"
+            app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />
+
+        <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="60sp"
         android:layout_height="60sp"
@@ -203,4 +215,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/del_but" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
