--- a/app/src/main/res/layout/fragment_uid.xml
+++ b/app/src/main/res/layout/fragment_uid.xml
@@ -13,9 +13,9 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/buttons"
         android:fontFamily="@font/regular"
-        android:text="@string/update_rout"
+        android:text="@string/order"
         android:textAlignment="center"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/colorAccent"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +62,7 @@
         android:fontFamily="@font/regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:scrollbarThumbVertical="@drawable/scrollbar_track"
         app:layout_constraintTop_toBottomOf="@+id/progress_bar">
 
 
@@ -72,9 +73,10 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="8dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/round_button_background"
         android:src="@drawable/up_arrow"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/scrollButtonDown"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,11 +88,25 @@
         android:layout_height="40dp"
         android:layout_margin="8dp"
 
-        android:layout_marginTop="20dp"
         android:background="@drawable/round_button_background"
         android:src="@drawable/down_arrow"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/scrollButtonUp"
         app:layout_constraintTop_toBottomOf="@+id/listView" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_call"
+        android:layout_width="52dp"
+        android:layout_height="139dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="8dp"
+        android:contentDescription="@string/call_admin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
